{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 21,
  "lineage": "cffe18d9-7d53-20d5-a133-26308c6ac6d5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05328821d00fdb3e5",
            "association_id": "eipassoc-0f3d57d75a34d9110",
            "domain": "vpc",
            "id": "eipalloc-05328821d00fdb3e5",
            "instance": "i-0c62a6c2cedb928e4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05f600e4b0a8e7d15",
            "private_dns": "ip-10-99-0-207.ec2.internal",
            "private_ip": "10.99.0.207",
            "public_dns": "ec2-35-168-67-205.compute-1.amazonaws.com",
            "public_ip": "35.168.67.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2",
            "aws_internet_gateway.igws",
            "aws_key_pair.rsa",
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.networks",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0230bd60aa48260c6",
            "arn": "arn:aws:ec2:us-east-1:043805049749:instance/i-0c62a6c2cedb928e4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c62a6c2cedb928e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "simon.jackson",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05f600e4b0a8e7d15",
            "private_dns": "ip-10-99-0-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.99.0.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03e0170a93f8c452f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fa21c5e30a0549c",
            "tags": {
              "Name": "myec2"
            },
            "tags_all": {
              "Name": "myec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a66a38462aa18572"
            ]
          },
          "dependencies": [
            "aws_key_pair.rsa",
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.networks",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043805049749:internet-gateway/igw-0c22bc52542f1aba3",
            "id": "igw-0c22bc52542f1aba3",
            "owner_id": "043805049749",
            "tags": {
              "Name": "myigw"
            },
            "tags_all": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-01fe90c48e80aa6c2"
          },
          "dependencies": [
            "aws_vpc.networks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043805049749:route-table/rtb-0229037257cec4ca9",
            "id": "rtb-0229037257cec4ca9",
            "owner_id": "043805049749",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c22bc52542f1aba3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fe90c48e80aa6c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igws",
            "aws_vpc.networks"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043805049749:route-table/rtb-0f5de23eb228f6c5d",
            "id": "rtb-0f5de23eb228f6c5d",
            "owner_id": "043805049749",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fe90c48e80aa6c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igws",
            "aws_vpc.networks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0-0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af98896205b42882",
            "route_table_id": "rtb-0229037257cec4ca9",
            "subnet_id": "subnet-06fa21c5e30a0549c"
          },
          "dependencies": [
            "aws_internet_gateway.igws",
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.networks"
          ]
        },
        {
          "index_key": "0-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041985e20e90b9088",
            "route_table_id": "rtb-0f5de23eb228f6c5d",
            "subnet_id": "subnet-0eeca1f03cf1e25bc"
          },
          "dependencies": [
            "aws_internet_gateway.igws",
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.networks"
          ]
        },
        {
          "index_key": "0-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b18e0cd042ae98c1",
            "route_table_id": "rtb-0f5de23eb228f6c5d",
            "subnet_id": "subnet-0ca676296501b6057"
          },
          "dependencies": [
            "aws_internet_gateway.igws",
            "aws_route_table.route_tables",
            "aws_subnet.subnets",
            "aws_vpc.networks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043805049749:security-group/sg-0a66a38462aa18572",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-0a66a38462aa18572",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "51.6.187.152/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20231204234000906400000002",
            "name_prefix": "terraform-",
            "owner_id": "043805049749",
            "revoke_rules_on_delete": false,
            "tags": {
              "owner": "Simon Jackson",
              "project": "AWS Cloud Fundamentals"
            },
            "tags_all": {
              "owner": "Simon Jackson",
              "project": "AWS Cloud Fundamentals"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fe90c48e80aa6c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.networks"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043805049749:security-group/sg-0ce8990bf898b51fb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-0ce8990bf898b51fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.99.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20231204234000902600000001",
            "name_prefix": "terraform-",
            "owner_id": "043805049749",
            "revoke_rules_on_delete": false,
            "tags": {
              "owner": "Simon Jackson",
              "project": "AWS Cloud Fundamentals"
            },
            "tags_all": {
              "owner": "Simon Jackson",
              "project": "AWS Cloud Fundamentals"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fe90c48e80aa6c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.networks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0-0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043805049749:subnet/subnet-06fa21c5e30a0549c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.99.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fa21c5e30a0549c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043805049749",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "Simon Jackson",
              "project": "AWS Cloud Fundamentals"
            },
            "tags_all": {
              "owner": "Simon Jackson",
              "project": "AWS Cloud Fundamentals"
            },
            "vpc_id": "vpc-01fe90c48e80aa6c2"
          },
          "dependencies": [
            "aws_vpc.networks"
          ]
        },
        {
          "index_key": "0-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043805049749:subnet/subnet-0eeca1f03cf1e25bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.99.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeca1f03cf1e25bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043805049749",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "Simon Jackson",
              "project": "AWS Cloud Fundamentals"
            },
            "tags_all": {
              "owner": "Simon Jackson",
              "project": "AWS Cloud Fundamentals"
            },
            "vpc_id": "vpc-01fe90c48e80aa6c2"
          },
          "dependencies": [
            "aws_vpc.networks"
          ]
        },
        {
          "index_key": "0-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043805049749:subnet/subnet-0ca676296501b6057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.99.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca676296501b6057",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043805049749",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "owner": "Simon Jackson",
              "project": "AWS Cloud Fundamentals"
            },
            "tags_all": {
              "owner": "Simon Jackson",
              "project": "AWS Cloud Fundamentals"
            },
            "vpc_id": "vpc-01fe90c48e80aa6c2"
          },
          "dependencies": [
            "aws_vpc.networks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "networks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043805049749:vpc/vpc-01fe90c48e80aa6c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.99.0.0/16",
            "default_network_acl_id": "acl-0a5cca19bb552102e",
            "default_route_table_id": "rtb-03bc2a2371b362a4b",
            "default_security_group_id": "sg-08efc4d295a134349",
            "dhcp_options_id": "dopt-0b437286bffe11aa9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01fe90c48e80aa6c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03bc2a2371b362a4b",
            "owner_id": "043805049749",
            "tags": {
              "Name": "myvpc"
            },
            "tags_all": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}